--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,20 @@
             <artifactId>gson</artifactId>
         </dependency>
 
+      <!--  调用C++     -->
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>5.7.0</version>
+        </dependency>
+
+        <!--  调用C++     -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.10</version>
+        </dependency>
+
 
 
         <!--健康检查-->
@@ -112,8 +126,11 @@
             <artifactId>opencv</artifactId>
             <version>3.4.2-0</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
